css/styles.css
@charset "UTF-8";
@import "https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,500&display=swap";
@import "https://fonts.googleapis.com/css2?family=Poppins:wght@100;200&display=swap";
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  text-decoration: none;
}

div {
  border: 0;
  outline: 0;
}

a:visited,
a:active,
a:focus {
  color: black;
}

ul {
  list-style: none;
}

button {
  font-family: inherit;
}

html {
  scroll-behavior: smooth;
}
@media (max-width: 425px) {
  html {
    font-size: 2vw;
  }
}

body {
  font-family: "Montserrat", sans-serif;
  background-color: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
}

header {
  z-index: 2;
  max-width: 100%;
}

main {
  z-index: 1;
  height: fit-content;
  background: linear-gradient(45deg, #eab92d 0%, #c79810 69%);
}

button {
  cursor: pointer;
}

form input {
  width: 100%;
  height: 100%;
}
form:focus {
  border: 1px solid rgba(240, 195, 0, 0.8);
}

.header {
  z-index: 2;
  background-color: black;
  position: sticky;
  top: 0;
}
.header__content {
  height: 50px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  max-width: 1800px;
  margin: 0 auto;
}
.header__logo {
  margin-left: 20px;
}
.header__search-bar {
  width: 380px;
}

.navigation-base > li {
  display: inline-block;
  padding: 5px 20px;
}
.navigation-base > li a {
  display: inline-block;
  position: relative;
  font-size: 18px;
  line-height: 50px;
  color: #f0c300;
  text-transform: uppercase;
}
.navigation-base > li a:hover::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border: 1px solid #f0c300;
}
.navigation-base > li a i {
  margin-right: 5px;
}

.navigation-multilevel {
  position: relative;
}
.navigation-multilevel ul {
  display: none;
  position: absolute;
}
.navigation-multilevel ul li {
  display: block;
  line-height: 50px;
  background-color: black;
}
.navigation-multilevel ul li a {
  color: black;
  display: block;
  line-height: 50px;
  text-indent: 20px;
  background-color: #f0c300;
}
.navigation-multilevel ul li:hover {
  background-color: black;
}
.navigation-multilevel:hover {
  background-color: #f0c300;
}
.navigation-multilevel:hover a {
  color: black;
}
.navigation-multilevel:hover > ul {
  display: block;
  top: 101%;
  left: 0;
  width: 150%;
}
.navigation-multilevel:hover > ul .navigation-lv2:hover {
  position: relative;
}
.navigation-multilevel:hover > ul .navigation-lv2:hover a {
  background-color: black;
  color: #f0c300;
}
.navigation-multilevel:hover > ul .navigation-lv2:hover ul {
  display: block;
  top: 0;
  left: 100%;
  width: 150%;
}

.container--center {
  width: 80%;
  height: inherit;
  margin: 0 auto;
}

.footer {
  color: #f0c300;
  background-color: black;
  width: 100%;
}
.footer__logo {
  display: block;
  text-align: center;
  padding: 20px 0;
}
.footer-content {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  padding: 2rem;
}

.footer-content__right, .footer-content__left {
  display: flex;
  flex-direction: column;
}
.footer-content__right {
  flex: 0 0 35%;
  align-items: flex-end;
}
.footer-content__right .icon-wrapper {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}
.footer-content__right .icon-wrapper__item {
  margin-bottom: 20px;
}
.footer-content__right .icon-wrapper__item a {
  order: 1;
  margin-left: 1rem;
}
.footer-content__left {
  flex: 0 0 35%;
  align-items: flex-start;
}
.footer-content__left .icon-wrapper {
  display: flex;
  flex-direction: row;
  width: 12rem;
  justify-content: space-between;
}
.footer-content__left .icon-wrapper__item p {
  display: none;
}
.footer-content__title {
  text-transform: uppercase;
  font-size: 2em;
  margin-bottom: 2vw;
  white-space: nowrap;
}
@media (min-width: 425px) and (max-width: 768px) {
  .footer-content {
    font-size: 10px;
    margin-bottom: 1vh;
  }
}

.logo {
  display: inline-block;
}
.logo > a {
  font-size: 30px;
  color: #f0c300;
  text-shadow: 2px 4px 3px rgba(124, 155, 11, 0.747);
}

.search-bar {
  background-color: #f0c300;
  height: 40px;
  width: 360px;
  margin-right: 20px;
  border-radius: 20px;
  padding: 5px 0px 5px 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.search-bar input {
  font-family: "Montserrat", sans-serif;
  height: 100%;
  width: 85%;
  text-indent: 15px;
  outline: 0;
  font-size: large;
  border: 0;
  background-color: transparent;
  order: 2;
}
.search-bar button {
  order: 1;
  font-size: large;
  background-color: black;
  width: 30px;
  height: 100%;
  border: 0;
  border-radius: 50%;
  outline: 0;
  color: #f0c300;
}

.icon-pagragraph {
  display: flex;
}
.icon-pagragraph a {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  background-color: #f0c300;
  text-align: center;
  line-height: 2rem;
  border-radius: 10px;
}
.icon-pagragraph i {
  font-size: larger;
}
.icon-pagragraph p {
  font-size: 1rem;
  font-weight: 800;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.category {
  text-align: center;
}
.category__content {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  box-shadow: 0 0 16px rgba(0, 0, 0, 0.7);
  overflow: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  overflow: hidden;
}
.category__thumbnail-cover {
  overflow: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  z-index: 1;
}
.category__img {
  z-index: -1;
  display: block;
  object-fit: cover;
  max-width: 100%;
  max-height: 100%;
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
  transition: brightness 0.9s ease;
  transition: transform 0.9s ease;
}
.category__info {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.7s ease-in-out;
}
.category__desc {
  text-transform: uppercase;
  font-size: 2rem;
  margin-bottom: 1rem;
  color: white;
}
.category__links {
  display: inline-block;
}
.category__links > a {
  cursor: pointer;
  color: black;
  display: block;
  height: 2em;
  width: 7em;
  background-color: #eab92d;
  border-radius: 10px;
  line-height: 2em;
  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
}

.category:hover .category__img {
  transform: scale(1.1);
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}
.category:hover .category__info {
  visibility: visible;
  opacity: 1;
}

.product {
  flex-basis: 25%;
  padding: 20px;
  box-shadow: 5px 5px 10 12 black;
}

.product__image img {
  width: 100%;
  height: 100%;
}

.category {
  text-align: center;
}
.category__content {
  position: relative;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  box-shadow: 0 0 16px rgba(0, 0, 0, 0.7);
  overflow: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  overflow: hidden;
}
.category__thumbnail-cover {
  overflow: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  z-index: 1;
}
.category__img {
  z-index: -1;
  display: block;
  object-fit: cover;
  max-width: 100%;
  max-height: 100%;
  -webkit-filter: brightness(100%);
  filter: brightness(100%);
  transition: brightness 0.9s ease;
  transition: transform 0.9s ease;
}
.category__info {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.7s ease-in-out;
}
.category__desc {
  text-transform: uppercase;
  font-size: 2rem;
  margin-bottom: 1rem;
  color: white;
}
.category__links {
  display: inline-block;
}
.category__links > a {
  cursor: pointer;
  color: black;
  display: block;
  height: 2em;
  width: 7em;
  background-color: #eab92d;
  border-radius: 10px;
  line-height: 2em;
  box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.8);
}

.category:hover .category__img {
  transform: scale(1.1);
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}
.category:hover .category__info {
  visibility: visible;
  opacity: 1;
}

.section-header {
  display: inline-block;
  margin-bottom: 20px;
  text-transform: uppercase;
  font-size: 2em;
  padding: 5px 10px;
  color: #f0c300;
  background-color: black;
  border-radius: 10px;
  margin-top: 10px;
  width: fit-content;
}

hr {
  overflow: visible;
  /* For IE */
  padding: 0;
  border: none;
  position: relative;
  text-align: center;
}

hr::after {
  content: "§";
  display: inline-block;
  position: absolute;
  top: -50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 1.5em;
  background: transparent;
}

.line--border-black-content-black {
  border-top: medium double black;
  color: black;
}

.line--border-yellow-content-yellow {
  border-top: medium double #f0c300;
  color: #f0c300;
}

.categories {
  padding-top: 2rem;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
}
.categories > * {
  margin: 0 0 3% 0;
  flex: 0 0 calc((100% - calc(3% * (2 - 1))) / 2);
}
.categories .category:nth-child(1) {
  flex-basis: 100%;
  max-height: 50em;
}
.categories .category:nth-child(2) {
  flex-basis: 100%;
  max-height: 50em;
}

.container__top-pick,
.container__featured-collection {
  text-align: center;
  border: none;
  outline: none;
  background-color: white;
  margin: 3rem 0;
  border-radius: 20px;
  box-shadow: 8px 8px 30px -10px black;
}

.list-products {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
}
.list-products > * {
  margin: 0 0 3% 0;
  flex: 0 0 calc((100% - calc(3% * (4 - 1))) / 4);
}

/*# sourceMappingURL=styles.css.map */

